# focal

./: .envrc-nix  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  package.nix
.github/workflows/: cachix.yml
src/: cli.rs  hyprland.rs  image.rs  lib.rs  main.rs  mango.rs  monitor.rs  niri.rs  picture.rs  rofi.rs  slurp.rs  sway.rs  video.rs  wf_recorder.rs
src/cli/: focal.rs  image.rs  mod.rs  video.rs  waybar.rs
