[package]
name = "focal"
version = "0.1.0"
authors = ["iynaix"]

edition = "2024"
build = "build.rs"

[dependencies]
arboard = { version = "3.6.0", features = ["wayland-data-control"] }
chrono = "0.4.41"
clap = { version = "4.5.44", features = ["derive", "string"] }
clap_complete = "4.5.57"
clap_mangen = "0.2.29"
ctrlc = "3.4.7"
dirs = "6.0.0"
execute = "0.2.13"
hyprland = { version = "0.4.0-beta.2" }
image = "0.25.6"
niri-ipc = "25.5.1"
notify-rust = "4.11.7"
regex = "1.11.1"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = "1.0.142"
which = "8.0.0"

[build-dependencies]
clap = { version = "4.5.44", features = ["derive", "string"] }
clap_complete = "4.5.57"
clap_mangen = "0.2.29"

[features]
default = ["niri", "ocr", "video"]
hyprland = []
niri = []
mango = []
sway = []
ocr = []
video = []
waybar = []

[[bin]]
name = "focal-waybar"
path = "src/bin/focal-waybar.rs"
required-features = ["waybar"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
strip = true
lto = true
