[package]
name = "focal"
version = "0.1.0"
authors = ["iynaix"]

edition = "2024"
build = "build.rs"

[dependencies]
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive", "string"] }
clap_complete = "4.5.59"
clap_mangen = "0.2.31"
ctrlc = "3.5.0"
dirs = "6.0.0"
execute = "0.2.13"
hyprland = { version = "0.4.0-beta.3" }
image = "0.25.8"
niri-ipc = "25.8.0"
notify-rust = "4.11.7"
regex = "1.12.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
which = "8.0.0"

[build-dependencies]
clap = { version = "4.5.50", features = ["derive", "string"] }
clap_complete = "4.5.59"
clap_mangen = "0.2.31"

[features]
default = ["ocr", "video"]
ocr = []
video = []
waybar = []

[[bin]]
name = "focal-waybar"
path = "src/bin/focal-waybar.rs"
required-features = ["waybar"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
strip = true
lto = true
